--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,19 +1,12 @@
 format = """
-$hostname\
+$directory\
 $localip\
 $shlvl\
 $shell\
 $env_var\
 $username\
-$sudo\
-$character\
-"""
-
-right_format = """
-$cmd_duration\
 $singularity\
 $kubernetes\
-$directory\
 $vcsh\
 $fossil_branch\
 $git_branch\
@@ -83,203 +76,202 @@ $jobs\
 $status\
 $os\
 $container\
-$battery\
-$time\
+$battery
+$sudo\
+$character\
 """
 
-add_newline = true
+[aws]
+symbol = "  "
+
+[battery]
+format = "[ $percentage $symbol]($style)"
+full_symbol = ""
+charging_symbol = "[↑](italic green)"
+discharging_symbol = "[↓](italic yellow)"
+unknown_symbol = "[](italic yellow)"
+empty_symbol = "[▃](italic red)"
+
+[buf]
+symbol = " "
+
+[c]
+symbol = " "
 
 [character]
 format = "$symbol "
 success_symbol = "[-->](bold purple)"
-error_symbol = "[](bold red)"
+error_symbol = "[X ](bold red)[-->](bold purple)"
 
-[env_var.VIMSHELL] # vim subshell
-format = "[$env_value]($style)"
-style = 'green italic'
+[conda]
+symbol = " "
 
-[sudo]
-format = "[$symbol]($style)"
-style = "italic bold purple"
-symbol = "◇┈"
-disabled = false
+[crystal]
+symbol = " "
 
-[username]
-style_user = "yellow bold"
-style_root = "purple bold italic"
-format = "[$user]($style) ▻ "
-disabled = false
+[dart]
+symbol = " "
 
 [directory]
 home_symbol = "~"
 truncation_length = 3
-truncation_symbol = "../"
-read_only = " "
+truncation_symbol = ""
+read_only = " 󰌾󰈅"
 style = "italic cyan"
-format = ' [$path]($style)[$read_only]($read_only_style)'
-
-[cmd_duration]
-min_time = 500
-format = "[$duration ](italic bright-yellow)"
-
-[jobs]
-format = "[ $symbol$number]($style)"
-style = "white"
-symbol = "[▶ ](blue italic)"
-
-[localip]
-ssh_only = true
-format = " ◯[$localipv4](bold magenta)"
-disabled = false
-
-[time]
-disabled = false
-format = "[ $time]($style)"
-time_format = "%R"
-utc_time_offset = "local"
-style = "dimmed white"
-
-[battery]
-format = "[ $percentage $symbol]($style)"
-full_symbol = "[█](italic green)"
-charging_symbol = "[↑](italic green)"
-discharging_symbol = "[↓](italic)"
-unknown_symbol = "[░](italic)"
-empty_symbol = "[▃](italic red)"
-
-[[battery.display]]
-threshold = 40
-style = "dimmed yellow"
-
-[[battery.display]]
-threshold = 70
-style = "dimmed white"
-
-[git_branch]
-format = " on[ $symbol $branch(:$remote_branch)]($style)"
-symbol = "[](bold purple)"
-style = "bold italic purple"
-
-[git_status]
-style = "italic bright-blue"
-format = """([⎪$ahead_behind$staged$modified$untracked$renamed$deleted$conflicted$stashed⎥]($style))"""
-conflicted = "[◪◦](italic bright-magenta)"
-ahead = "[▲│[${count}](bold white)│](italic green)"
-behind = "[▽│[${count}](bold white)│](italic red)"
-diverged = "[◇ ▲┤[${ahead_count}](regular white)│▽┤[${behind_count}](regular white)│](italic bright-magenta)"
-untracked = "[◌◦](italic bright-yellow)"
-stashed = "[◦◫◦](italic white)"
-modified = "[●◦](italic yellow)"
-staged = "[■┤[$count](bold white)│](italic bright-cyan)"
-renamed = "[◎◦](italic bright-blue)"
-deleted = "[✕](italic red)"
-
-[deno]
-format = " deno [∫ $version](blue italic)"
-version_format = "${major}.${minor}"
-
-[lua]
-format = " lua [${symbol}${version}]($style)"
-symbol = "⨀ "
-style = "italic bright-yellow"
-
-[nodejs]
-format = " node [󰫈 ($version)](italic bright-green)"
-detect_files = ["package-lock.json", "yarn.lock"]
-version_format = "${major}.${minor}"
-
-[python]
-format = " py [${symbol}${version}]($style)"
-symbol = "[⌉](italic bright-blue)⌊ "
-version_format = "${major}.${minor}"
-style = "italic bright-yellow"
-
-[ruby]
-format = " rb [${symbol}${version}]($style)"
-symbol = "◆ "
-version_format = "${major}.${minor}"
-style = "italic red"
-
-[rust]
-format = " rs [$symbol$version]($style)"
-symbol = "󱘗 "
-version_format = "${major}.${minor}"
-style = "italic red"
-
-[package]
-format = " pkg [$symbol$version]($style)"
-version_format = "${major}.${minor}"
-symbol = "󰏖 "
-style = "bright-yellow italic"
-
-[swift]
-format = " sw [${symbol}${version}]($style)"
-symbol = "◁ "
-style = "italic bright-red"
-version_format = "${major}.${minor}"
-
-[aws]
-format = " aws [$symbol $profile $region]($style)"
-style = "italic blue"
-symbol = "▲ "
-
-[buf]
-symbol = "■ "
-format = " buf [$symbol $version $buf_version]($style)"
-
-[c]
-symbol = " "
-format = " c [$symbol($version(-$name))]($style)"
-
-[conda]
-symbol = "◯ "
-format = " conda [$symbol$environment]($style)"
-
-[dart]
-symbol = "◁◅ "
-format = " dart [$symbol($version )]($style)"
+format = '[$path]($style)[$read_only]($read_only_style) '
 
 [docker_context]
-symbol = "◧ "
-format = " docker [$symbol$context]($style)"
+symbol = " "
 
 [elixir]
-symbol = "△ "
-format = " exs [$symbol $version OTP $otp_version ]($style)"
+symbol = " "
 
 [elm]
-symbol = "◩ "
-format = " elm [$symbol($version )]($style)"
+symbol = " "
+
+[fennel]
+symbol = " "
+
+[fossil_branch]
+symbol = " "
+
+[git_branch]
+symbol = " "
+
+[git_commit]
+tag_symbol = '  '
 
 [golang]
-symbol = "∩ "
-format = " go [$symbol($version )]($style)"
+symbol = " "
+
+[guix_shell]
+symbol = " "
 
 [haskell]
-symbol = "❯λ "
-format = " hs [$symbol($version )]($style)"
+symbol = " "
+
+[haxe]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[hostname]
+ssh_symbol = " "
 
 [java]
 symbol = " "
-format = " java [${symbol}(${version} )]($style)"
-style = "bold blue"
 
 [julia]
-symbol = "◎ "
-format = " jl [$symbol($version )]($style)"
+symbol = " "
+
+[kotlin]
+symbol = " "
+
+[lua]
+symbol = " "
 
 [memory_usage]
-symbol = "▪▫▪ "
-format = " mem [${ram}( ${swap})]($style)"
+symbol = "󰍛 "
+
+[meson]
+symbol = "󰔷 "
 
 [nim]
-symbol = "▴▲▴ "
-format = " nim [$symbol($version )]($style)"
+symbol = "󰆥 "
 
 [nix_shell]
-symbol = "⊛ "
-format = " nix [$symbol$state $name]($style)"
+symbol = " "
 
-[spack]
-symbol = "◇ "
-format = " spack [$symbol$environment]($style)"
+[nodejs]
+symbol = " "
+
+[ocaml]
+symbol = " "
+
+[os.symbols]
+Alpaquita = " "
+Alpine = " "
+AlmaLinux = " "
+Amazon = " "
+Android = " "
+Arch = " "
+Artix = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Garuda = "󰛓 "
+Gentoo = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
+Kali = " "
+Linux = " "
+Mabox = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+RockyLinux = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
+Void = " "
+Windows = "󰍲 "
+
+[package]
+symbol = "󰏗 "
+
+[perl]
+symbol = " "
+
+[php]
+symbol = " "
+
+[pijul_channel]
+symbol = " "
+
+[python]
+symbol = " "
+
+[rlang]
+symbol = "󰟔 "
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = "󱘗 "
+
+[scala]
+symbol = " "
+
+[sudo]
+format = "[$symbol]($style)"
+style = "bold green"
+symbol = " "
+disabled = false
+
+[swift]
+symbol = " "
+
+[zig]
+symbol = " "
+
+[gradle]
+symbol = " "
